--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
+logging.level.org.thymeleaf=TRACE
+logging.level.org.springframework.web=DEBUG
